@@ -1,3 +1,7 @@
+2002-02-15  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.c-torture/execute/20020215-1.c: New test.
+
 2002-02-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/dg.exp: Exclude debug subdir, it has its own .exp.
